--- a/pageParts/index.html
+++ b/pageParts/index.html
@@ -5,9 +5,17 @@
 <!-- ##header## -->
 
 <body>
-    <!-- ##name## -->
+    <section>
+        <div class="grid-container">
+            <div class="grid-item">
+                <!-- ##name## -->
+            </div>
 
-    <!-- ##social-links## -->
+            <div class="grid-item">
+                <!-- ##social-links## -->
+            </div>
+        </div>
+    </section>
 
     <section>
         <div class="grid-container">
