feat: recursive snippet insertion

--- a/pageParts/actions/musicSectionTemplate.html
+++ b/pageParts/actions/musicSectionTemplate.html
@@ -5,5 +5,7 @@
 
     <!-- $$soundCloudEmbed$$ -->
 
-    <p><!-- $$description$$ --></p>
+    <p><!-- $$shortDescription$$ --></p>
+
+    <!-- $$linkToDescription$$ -->
 </div>
