--- a/pageParts/index.html
+++ b/pageParts/index.html
@@ -5,17 +5,7 @@
 <!-- ##header## -->
 
 <body>
-    <section>
-        <div class="grid-container">
-            <div class="grid-item">
-                <!-- ##name## -->
-            </div>
-
-            <div class="grid-item">
-                <!-- ##social-links## -->
-            </div>
-        </div>
-    </section>
+    <!-- ##nameAndSocials## -->
 
     <section>
         <div class="grid-container">
