feat: website built

--- a/pageParts/actions/musicSectionTemplate.html
+++ b/pageParts/actions/musicSectionTemplate.html
@@ -7,5 +7,5 @@
 
     <p><!-- $$shortDescription$$ --></p>
 
-    <!-- $$linkToDescription$$ -->
+    <h4><!-- $$linkToDescriptionPage$$ --></h4>
 </div>
