--- a/pageParts/home.html
+++ b/pageParts/home.html
@@ -5,6 +5,8 @@
 <!-- ##header## -->
 
 <body>
+    <div class="spacer"></div>
+    
     <!-- ##nameAndSocials## -->
 
     <section>
@@ -12,6 +14,8 @@
             <!-- ##musicSection## -->
         </div>
     </section>
+
+    <div class="spacer"></div>
 </body>
 
 <!-- ##footer## -->
