--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
 <header>
     <div class="navigation">
 <a href="./home.html">Home</a>
-<a href="./assearchforgod.html">Assearchforgod</a>
-<a href="./when.html">When</a>
+<a href="./asearchforgod.html">Asearchforgod</a>
+<a href="./waterfalls.html">Waterfalls</a>
 </div>
 
 </header>
@@ -53,25 +53,27 @@
             
 
 <div class="grid-item">
-    <h3>asearchforgod?</h3>
+    <h3><a href="./asearchforgod.html"><i>asearchforgod?</i></a>
+</h3>
 
     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1941539339&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/matangi-priya-522922640" title="Matangi Priya" target="_blank" style="color: #cccccc; text-decoration: none;">Matangi Priya</a> · <a href="https://soundcloud.com/matangi-priya-522922640/asearchforgod" title="asearchforgod?" target="_blank" style="color: #cccccc; text-decoration: none;">asearchforgod?</a></div>
 
-    <p>This is a description.</p>
+    <p>Final piece for my computer music class</p>
 
-    <h4><a href="./assearchforgod.html">Read more about <i>asearchforgod?</i> here!</a>
+    <h4><a href="./asearchforgod.html">Read more about <i>asearchforgod?</i> here!</a>
 </h4>
 </div>
 
 
 <div class="grid-item">
-    <h3>when?</h3>
+    <h3><a href="./waterfalls.html"><i>waterfalls</i></a>
+</h3>
 
-    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1941541671&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/matangi-priya-522922640" title="Matangi Priya" target="_blank" style="color: #cccccc; text-decoration: none;">Matangi Priya</a> · <a href="https://soundcloud.com/matangi-priya-522922640/birds" title="when?" target="_blank" style="color: #cccccc; text-decoration: none;">when?</a></div>
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1941541671&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/matangi-priya-522922640" title="Matangi Priya" target="_blank" style="color: #cccccc; text-decoration: none;">Matangi Priya</a> · <a href="https://soundcloud.com/matangi-priya-522922640/birds" title="waterfalls" target="_blank" style="color: #cccccc; text-decoration: none;">waterfalls</a></div>
 
-    <p>This is another description.</p>
+    <p>Created with a mix of Buchla and digital synthesizers</p>
 
-    <h4><a href="./when.html">Read more about <i>when?</i> here!</a>
+    <h4><a href="./waterfalls.html">Read more about <i>waterfalls</i> here!</a>
 </h4>
 </div>
 
